--- a/app/src/main/res/menu/action_bar_menu2.xml
+++ b/app/src/main/res/menu/action_bar_menu2.xml
@@ -2,11 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_create_new_post"
-        android:checkable="false"
-        android:checked="false"
-        android:enabled="true"
-        android:onClick="newPostButtonClick"
-        android:title="@string/create_new_post"
-        app:showAsAction="ifRoom"/>
+        android:id="@+id/action_settings"
+        android:icon="@drawable/settings_icon"
+        android:title="Settings"
+        app:showAsAction="never"/>
 </menu>
