--- a/app/src/main/res/layout/activity_comment_view.xml
+++ b/app/src/main/res/layout/activity_comment_view.xml
@@ -8,7 +8,7 @@
     tools:context="edu.illinois.finalproject.activities.CommentViewActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/add_comment_button"
+        android:id="@+id/comment_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom|right"
@@ -18,20 +18,41 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"/>
+        app:layout_constraintVertical_bias="1.0">
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="20dp"
-        app:backgroundTint="@color/colorPrimary"
-        app:elevation="6dp"
-        app:fabSize="normal"
-        app:layout_anchorGravity="bottom|right"
-        app:srcCompat="@drawable/plus"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="339dp"
-        tools:layout_editor_absoluteY="531dp"/>
+        android:layout_gravity="bottom|center"
+        android:background="@color/colorAccent">
+
+        <EditText
+            android:id="@+id/new_comment_textview"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|left"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:ems="10"
+            android:hint="Add a comment"
+            android:inputType="textMultiLine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/add_comment_button"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <Button
+            android:id="@+id/add_comment_button"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ic_send_white_24dp"
+            android:backgroundTint="#b2ff00"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
