--- a/app/src/main/res/layout/comment_row_item.xml
+++ b/app/src/main/res/layout/comment_row_item.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_constraint"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         app:cardBackgroundColor="@color/carbon_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +26,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:text="Name"
+                android:text="@string/name"
                 android:textAlignment="viewStart"
                 android:textColor="@color/carbon_black"
                 android:textStyle="bold"/>
@@ -36,19 +35,19 @@
                 android:id="@+id/comment_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
-                android:text="Comment"
+                android:text="@string/comment"
                 android:textAlignment="viewStart"/>
 
             <TextView
                 android:id="@+id/comment_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:text="Date and time"
+                android:text="@string/date_and_time"
                 android:textSize="12sp"/>
 
             <Space
