--- a/app/src/main/res/layout/comment_row_item.xml
+++ b/app/src/main/res/layout/comment_row_item.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,49 +18,78 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/commenter_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
+                <ImageView
+                    android:id="@+id/commenter_photo"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
                     android:layout_weight="1"
-                    android:text="@string/name"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/carbon_black"
-                    android:textStyle="bold"/>
+                    android:requiresFadingEdge="horizontal|vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@mipmap/ic_launcher"/>
 
-                <TextView
-                    android:id="@+id/comment_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
-                    android:text="@string/comment"
-                    android:textAlignment="viewStart"/>
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/commenter_photo"
+                    tools:layout_editor_absoluteY="0dp">
 
-                <TextView
-                    android:id="@+id/comment_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
-                    android:text="@string/date_and_time"
-                    android:textSize="12sp"/>
+                    <TextView
+                        android:id="@+id/commenter_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        android:text="@string/name"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/carbon_black"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/comment_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        android:text="@string/comment"
+                        android:textAlignment="viewStart"/>
+
+                    <TextView
+                        android:id="@+id/comment_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        android:text="@string/date_and_time"
+                        android:textSize="12sp"/>
+
+                </LinearLayout>
 
                 <Space
                     android:layout_width="match_parent"
                     android:layout_height="10dp"
-                    android:layout_weight="1"/>
-            </LinearLayout>
+                    android:layout_weight="1"
+                    tools:layout_editor_absoluteY="64dp"/>
+            </android.support.constraint.ConstraintLayout>
+
         </android.support.v7.widget.CardView>
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
