--- a/app/src/main/res/layout/post_row_item.xml
+++ b/app/src/main/res/layout/post_row_item.xml
@@ -40,14 +40,41 @@
                     android:padding="10dp"
                     android:weightSum="1">
 
-                    <TextView
-                        android:id="@+id/post_username"
+                    <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/username"
-                        android:textColor="#23001E"
-                        android:textSize="16sp"
-                        android:textStyle="bold"/>
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/userImageView"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_weight="1"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@android:drawable/sym_def_app_icon"/>
+
+                        <TextView
+                            android:id="@+id/post_username"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_weight="1"
+                            android:text="@string/username"
+                            android:textColor="#23001E"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/userImageView"
+                            app:layout_constraintTop_toTopOf="parent"/>
+                    </android.support.constraint.ConstraintLayout>
 
                     <TextView
                         android:id="@+id/display_location"
@@ -58,6 +85,7 @@
                         android:textColor="#23001E"
                         android:textSize="14sp"
                         />
+
                 </LinearLayout>
             </LinearLayout>
 
@@ -81,7 +109,7 @@
                 android:text="@string/caption"
                 android:textAlignment="viewStart"
                 android:textColor="@color/carbon_black"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 />
 
             <TextView
