--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -22,6 +22,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:background="@color/colorPrimary"
+            android:onClick="onSetUsername"
             android:padding="5dp"
             android:text="save and go back"
             android:textColor="@android:color/white"
@@ -38,8 +39,9 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Username"
+            android:text="New Username"
             android:textAlignment="viewStart"
+            android:textAllCaps="false"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
