--- a/app/src/main/res/layout/post_row_item.xml
+++ b/app/src/main/res/layout/post_row_item.xml
@@ -37,7 +37,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:padding="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingStart="10dp"
                     android:weightSum="1">
 
                     <android.support.constraint.ConstraintLayout
@@ -76,15 +79,17 @@
                             app:layout_constraintTop_toTopOf="parent"/>
                     </android.support.constraint.ConstraintLayout>
 
-                    <TextView
+                    <Button
                         android:id="@+id/display_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/location"
-                        android:textAlignment="viewStart"
-                        android:textColor="#23001E"
-                        android:textSize="14sp"
-                        />
+                        android:layout_margin="0dp"
+                        android:background="@android:color/transparent"
+                        android:padding="0dp"
+                        android:text="Location"
+                        android:textAlignment="center"
+                        android:textAllCaps="false"
+                        android:textColor="#0d4aff"/>
 
                 </LinearLayout>
             </LinearLayout>
