--- a/app/src/main/res/layout/activity_comment_view.xml
+++ b/app/src/main/res/layout/activity_comment_view.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:background="@color/colorAccent">
+        android:background="@android:color/white">
 
         <EditText
             android:id="@+id/new_comment_textview"
@@ -36,9 +36,11 @@
             android:layout_gravity="bottom|left"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:backgroundTint="@color/colorPrimary"
             android:ems="10"
             android:hint="Add a comment"
             android:inputType="textMultiLine"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/add_comment_button"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -49,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:background="@drawable/ic_send_white_24dp"
-            android:backgroundTint="#b2ff00"
+            android:backgroundTint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
