--- a/app/src/main/res/layout/post_row_item.xml
+++ b/app/src/main/res/layout/post_row_item.xml
@@ -89,7 +89,7 @@
                         android:text="Location"
                         android:textAlignment="center"
                         android:textAllCaps="false"
-                        android:textColor="#0d4aff"/>
+                        />
 
                 </LinearLayout>
             </LinearLayout>
@@ -137,9 +137,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_margin="10dp"
-                android:background="?attr/colorAccent"
+                android:background="?attr/colorPrimary"
                 android:text="View comments"
-                android:textColor="#b2ff00"/>
+                android:textColor="@color/carbon_white"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
